--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 /* Fonts */
 /* Importar aquí la font */
 
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 /* Aquí les dejamos como ayuda este "reset" en el cual ajustamos algunas propiedades
 *  cuyos valores asigna por defecto el navegador.
@@ -11,12 +11,23 @@
 
 /* Reset */
 * {
+    font-family: 'Lato', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     /* Para que el scrolleo en la one page sea suave */
     scroll-behavior: smooth;
+    background: #f9019a;
+    line-height: 1.2;
+    text-align: center;
+    /*justify-content: center;*/
+    vertical-align: middle;
+    font-size: 18px;
 }
+h1 {font-size: 36px;	}
+
+h2 {font-size: 28px;	}
+
 
 /* Para quitar los puntos a los items de listas */
 ul {
