--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,26 @@
     padding: 0;
     /* Para que el scrolleo en la one page sea suave */
     scroll-behavior: smooth;
-    background: #f9019a;
+    background: #fbfbfb;
     line-height: 1.2;
     text-align: center;
     /*justify-content: center;*/
     vertical-align: middle;
     font-size: 18px;
 }
-h1 {font-size: 36px;	}
 
-h2 {font-size: 28px;	}
+h1 {
+    font-size: 36px;
+    padding-top: 20px;
+    padding-bottom: 20px; 
+}
+
+h2 {
+    font-size: 28px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
 
 
 /* Para quitar los puntos a los items de listas */
@@ -48,9 +58,69 @@ a {
     margin: auto;
 }
 */
+
+header nav {
+    position: fixed;
+    display: flex;
+    /*flex-direction:row;*/
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+    background: #fbfbfb;
+    width: 740px;
+    padding: 10px;
+    box-shadow: 0 10px 15px 1px #5f5f5f;
+
+}
+
+header nav a img {
+    max-height: 75px;
+}
+
 body {
-    max-width: 1200px;
+    max-width: 740px;
+    /*antes 1200*/
     margin: auto;
+}
+
+#inicio figure img {
+    height: 400px;
+    width: 400px;
+    border-radius: 100%;
+}
+
+section {
+    min-height: 100vh;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#inicio {
+    padding-top: 150px;
+
+}
+
+#contacto img {height: 90px;width: 90px;}
+
+#contacto ul {
+    padding-top: 50px;
+    display: flex;
+    /*flex-direction:row;*/
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+    background: #fbfbfb;
+    width: 740px;
+    padding: 100px;
+    
+
+}
+
+
+footer {
+    background: #af599e;
+    color: #fbfbfb;
+    height: 90px;
 }
 
 /* Recomendaciones! 
