--- a/css/styles.css
+++ b/css/styles.css
@@ -97,19 +97,6 @@ section {
     padding-bottom: 20px;
 }
 
-#hablemos {
-
-    width: 80%;
-    height: 90%;
-    background: rgba(175, 89, 158, 0.3);
-    padding: 0px 0px 0px 0px;
-    border: 0px 0px 0px 0px;
-    margin: 0px 0px 0px 0px;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
 #inicio {
     padding-top: 150px;
 
@@ -125,7 +112,12 @@ section {
     height: 40px;
     margin: 25px;
     padding: 0;
-    boder: 0;
+    border: 0;
+}
+
+#article h2{
+
+ background: red);
 }
 
 #contacto img {
@@ -153,23 +145,6 @@ section {
     background: #af599e;
     color: #fbfbfb;
     height: 90px;
+}
 
 
-
-    /* Recomendaciones! 
-*  - Comenzar desde lo más general y luego ir hacia lo mas específico, asignando primero
-*    "estilos generales". Una buena idea sería comenzar por el <body> ;)
-*
-*  - Recuerden que queremos evitar "repetir código", en CSS usando la cualidad de la herencia
-*    podemos setear ciertas propiedades en un elemento padre y dejar que sean heredadas (por ejemplo: font-size)
-*
-*  - Nadie sabe todas las propiedades CSS de memoria, si no saben como hacer algo no lo recuerdan, la respuesta
-*    pueden encontrarla buscando en la web algo como "CSS como hacer ... " o "propiedad css para hacer ..."
-*
-*  - Usen mucho las herramientas para desarrolladores del navegador para ir
-*    probando el CSS que escriben, resolver dudas y problemas.
-*
-*  - Paciencia, resiliencia y creatividad! No se desanimen, las primeras experiencias maquetando con HTML y CSS
-*    pueden ser frustrantes, pero estas habilidades se van desarrollando con la experiencia, es como aprender
-*    un trabajo manual, hacer una artesanía, tocar un instrumento musical... la práctica es todo!
-*/
