--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ section {
 
 #inicio {
     padding-top: 150px;
-    
+
 }
 
 #inicio a {
@@ -111,10 +111,10 @@ section {
     font-size: 20px;
     /*display: inline-block;*/
     width: 200px;
-    height: 50px;   
-      /*padding: 0;*/
+    height: 50px;
+    /*padding: 0;*/
     /*border: 0;*/
-    
+
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -153,8 +153,10 @@ section {
     border-radius: 10%;
     display: flexbox;
     max-width: 100%;
-  
+
 
 }
 
-p {padding-bottom: 20px;}
+p {
+    padding-bottom: 20px;
+}
