--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ body {
     height: 400px;
     width: 400px;
     border-radius: 100%;
+    
 }
 
 section {
@@ -105,11 +106,10 @@ section {
 #inicio a  {
     background: #af599e;
     color: #fbfbfb;
-    border-radius: 50px/45px;
     font-size: 20px;
     width: 250px;
     height: 50px;
-    
+    border-radius: 50px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -145,7 +145,7 @@ section {
 
 #contacto article {
     background-color: rgba(175, 89, 158, 0.3);
-    border-radius: 5%;
+    border-radius: 20px;
     display: flexbox;
     max-width: 100%;
 
