--- a/css/styles.css
+++ b/css/styles.css
@@ -19,11 +19,10 @@
     scroll-behavior: smooth;
     line-height: 1.2;
     text-align: center;
-    justify-content: center;
-    vertical-align: middle;
+    //justify-content: center;
+    //rowvertical-align: middle;
     font-size: 18px;
-    flex-direction: row;
-
+							
 }
 
 
@@ -37,10 +36,11 @@ h2 {
     font-size: 28px;
     padding-top: 20px;
     padding-bottom: 20px;
+
 }
 
 
-/* Para quitar los puntos a los items de listas*/
+/* Para quitar los puntos a los items de listas */
 ul {
     list-style: none;
 }
@@ -68,11 +68,12 @@ header nav {
     align-items: center;
     height: 90px;
     background: #fbfbfb;
-    width: 100%;
+    /*width: 100%;*/
     padding: 30px;
     box-shadow: 0 10px 15px 1px #5f5f5f;
-    max-width: 100%;
-    width: 1200px;
+							width: 640px;
+							max-width: 100%;
+	
 }
 
 header nav a img {
@@ -80,11 +81,15 @@ header nav a img {
 }
 
 body {
-    max-width: 100%;
-    width: 1200px;    
+    /*max-width: 740px;*/
+    /*antes 1200*/
+
+    /*width: 100%;*/
+							width: 640px;
+							max-width: 100%;	
     margin: auto;
     background: #fbfbfb;
-
+							
 
 }
 
@@ -92,24 +97,31 @@ body {
     height: 400px;
     width: 400px;
     border-radius: 100%;
-    
 }
 
 section {
     min-height: 100vh;
-    padding-top: 130px;
+    padding-top: 100px;
     padding-bottom: 20px;
-    
+
 }
 
+#inicio {
+    padding-top: 100px;
 
-#inicio a  {
+}
+
+#inicio a {
     background: #af599e;
     color: #fbfbfb;
+    border-radius: 20%;
     font-size: 20px;
-    width: 250px;
+    /*display: inline-block;*/
+    width: 200px;
     height: 50px;
-    border-radius: 50px;
+    /*padding: 0;*/
+    /*border: 0;*/
+
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -145,13 +157,17 @@ section {
 
 #contacto article {
     background-color: rgba(175, 89, 158, 0.3);
-    border-radius: 20px;
+    border-radius: 10%;
     display: flexbox;
-    max-width: 100%;
+    max-width:95%;
 
 
 }
 
+
+
 p {
     padding-bottom: 20px;
+
+						
 }
